--- a/package.json
+++ b/package.json
@@ -5,20 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "budo index.js --live -t envify | bistre"
+    "start": "budo index.js --live | bistre"
   },
   "author": "Victor Powell <vicapow@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "bistre": "^1.0.1",
     "budo": "^4.2.2",
-    "d3": "^3.5.6",
-    "envify": "^3.4.0",
     "global": "^4.3.0",
     "immutable": "^3.7.5",
     "object-assign": "^4.0.1",
-    "r-dom": "^1.3.0",
-    "react": "^0.13.0",
-    "react-map-gl": "^0.2.1"
+    "r-dom": "^2.1.0",
+    "raster-tile-style": "^1.0.1",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.3",
+    "react-map-gl": "^0.6.0"
   }
 }
