--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "react-map-gl-playground",
+  "name": "react-map-gl-interactive-choropleth-example",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "budo index.js --live | bistre"
+    "start": "budo index.js --live | bistre",
+    "build": "browserify -g uglifyify ./index.js -t brfs > bundle.js"
   },
   "author": "Victor Powell <vicapow@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "bistre": "^1.0.1",
+    "brfs": "^1.4.1",
+    "browserify": "^12.0.1",
     "budo": "^4.2.2",
     "global": "^4.3.0",
     "immutable": "^3.7.5",
@@ -19,6 +22,7 @@
     "raster-tile-style": "^1.0.1",
     "react": "^0.14.0",
     "react-dom": "^0.14.3",
-    "react-map-gl": "^0.6.0"
+    "react-map-gl": "^0.6.0",
+    "uglifyify": "^3.0.1"
   }
 }
